K8s-manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  # nema primijenjenih pod security standards
