K8s-manifest/pod-security-hardened.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
  labels:
    pod-security.kubernetes.io/enforce: "restricted"
    pod-security.kubernetes.io/audit: "restricted"
    pod-security.kubernetes.io/warn: "restricted"
