K8s-manifest/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  selector:
    matchLabels:
      app: back-selec
  template:
    metadata:
      labels:
        app: back-selec
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: backend-sa
      containers:
      - name: backend-container
        image: krishna026/chat-app-backend-image
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          privileged: false
          allowPrivilegeEscalation: false 
          readOnlyRootFilesystem: false  
          capabilities:
            drop: ["ALL"]
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5001
