K8s-manifest/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chat-app
spec:
  type: NodePort
  selector:
    app: back-selec
  ports:
  - name: api
    port: 5001
    targetPort: 5001
    nodePort: 30001
